--- a/Newbie.Web/Views/Member/Index.cshtml
+++ b/Newbie.Web/Views/Member/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>首頁</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">新增</a>
 </p>
 <table class="table">
     <thead>
@@ -30,6 +30,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Intro)
             </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Joindate)
             </th>
@@ -58,13 +59,15 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Intro)
                 </td>
+
                 <td>
                     @Html.DisplayFor(modelItem => item.Joindate)
                 </td>
+
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.MemberspublicId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.MemberspublicId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.MemberspublicId">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.MemberspublicId">編輯</a> |
+                    @*<a asp-action="Details" asp-route-id="@item.MemberspublicId">Details</a> |*@
+                    <a asp-action="Delete" asp-route-id="@item.MemberspublicId">刪除</a>
                 </td>
             </tr>
         }
